--- a/pom.xml
+++ b/pom.xml
@@ -23,12 +23,14 @@
       <scope>test</scope>
     </dependency>
     
-    <!-- https://mvnrepository.com/artifact/com.relevantcodes/extentreports -->
+<!-- https://mvnrepository.com/artifact/com.aventstack/extentreports -->
 <dependency>
-    <groupId>com.relevantcodes</groupId>
+    <groupId>com.aventstack</groupId>
     <artifactId>extentreports</artifactId>
-    <version>2.41.2</version>
+    <version>3.1.5</version>
+    <scope>provided</scope>
 </dependency>
+
     
   </dependencies>
 </project>
