--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
   <groupId>com.qa</groupId>
   <artifactId>ExampleCIProject</artifactId>
   <version>0.0.1-SNAPSHOT</version>
-  <packaging>jar</packaging>
+  <packaging>war</packaging>
 
   <name>ExampleCIProject</name>
   <url>http://maven.apache.org</url>
@@ -33,4 +33,14 @@
 
     
   </dependencies>
+  
+   <reporting>
+    <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-report-plugin</artifactId>
+        <version>2.22.1</version>
+      </plugin>
+    </plugins>
+  </reporting>
 </project>
